# netacct-mysql

./: .gitignore  AUTHORS  ChangeLog  FAQ  FAQ.bg  INSTALL  INSTALL.bg  Makefile.in  NEWS  README  README.Oracle  README.Solaris  README.bg  README.md  TODO  config.h.in  configure  configure.in  netacct.sql  upgrade.sql
.github/workflows/: debian-latest.yml
contrib/: README.contrib  nacctd.debian  nacctd.freebsd  nacctd.redhat  nacctd.service  nacctd.solaris  nacctpeering.bg  nacctpeering.ru  nacctpeering.ukr  netacct-ncurses-config.incomplete
src/: ChangeLog  Makefile.am  Makefile.in  capture.c  collect.c  config.c  daemon.c  main.c  malloc.c  mysql.c  nacctd.8  nacctpeering  nacctpeering.8  naccttab.sample  netacct.h  oracle.pc  process.c  utils.c
